fix the state name, add scrollbar, fix some styling sizes

--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -24,7 +24,7 @@
         align-items: center;
         padding-bottom: 10px;
         border-bottom: 1px solid $color-grey-200;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
 
     .fold{
@@ -43,7 +43,7 @@
 
 .scrollable-content{
     height: 100%;
-    padding: 42px 36px 42px 36px;
+    padding: 36px;
     overflow-y: auto;
 }
 
