--- a/src/components/TextGenerationForm.scss
+++ b/src/components/TextGenerationForm.scss
@@ -2,7 +2,7 @@
 @import "../sass/base/typography.scss";
 .submit-btn {
     display: inline-block;
-    margin-top: 40px;
+    margin-top: 57px;
     padding: 12px;
     border: none;
     border-radius: 10px;
