--- a/src/components/ViewBoard.scss
+++ b/src/components/ViewBoard.scss
@@ -6,7 +6,6 @@
     height: 100vh;
     background-color: $color-white;
     overflow-y: scroll;
-    margin: 28px 36px 0 36px;
-    border-radius: 10px 10px 0 0;
+    margin-left: 28px;
     box-shadow: 0px 4px 8px 0px rgba(184, 184, 184, 0.5);
 }
