--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -94,7 +94,7 @@ textarea{
     position: relative;
     width: 40px; 
     height: 40px;
-    margin-right: 20px;
+    margin-right: 24px;
   }
 
 
