--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,3 +19,14 @@ html{
     height: 100vh;
     display: flex;
 }
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-thumb{
+    border: 4px, solid, rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    border-radius: 9999px;
+    background-color: $color-grey-300;
+}
